# Voxel

./: .gitignore  CMakeLists.txt  makefile
src/: GLUtil.hpp  IOUtil.hpp  OBJUtil.cpp  OBJUtil.hpp  Voxel.cpp
src/glad/include/glad/: gl.h
src/shaders/: FragmentPost.glsl  FragmentSimple.glsl  VertexSimple.glsl
